objects/ScCollection_User_Assignment__c.object
<CustomObject>
    <description>This is being used for Collector &amp; P2P report.</description>
    <fields>
        <fullName>ScCollection_Contract_Ids__c</fullName>
        <label>Contract Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Review_Date__c</fullName>
        <label>Review Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Review_Date__c</columns>
        <columns>ScCollection_User__c</columns>
        <columns>ScCollection_Contract_Ids__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UA-{00000000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>